force-app/main/default/objects/Carro__c/Carro__c.object-meta.xml
<CustomObject>
    <label>Carro</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Nome de Carro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>