force-app/main/default/objects/Carro__c/fields/Chassi__c.field-meta.xml
<CustomField>
    <fullName>Chassi__c</fullName>
    <label>Chassi</label>
    <length>17</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>