force-app/main/default/objects/Carro__c/fields/Combustivel__c.field-meta.xml
<CustomField>
    <fullName>Combustivel__c</fullName>
    <label>Combustivel</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>