force-app/main/default/objects/Carro__c/fields/Cor__c.field-meta.xml
<CustomField>
    <fullName>Cor__c</fullName>
    <label>Cor</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>