force-app/main/default/objects/Carro__c/fields/Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Fabricante__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fabricante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carros</relationshipLabel>
    <relationshipName>Carros</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>