force-app/main/default/objects/Carro__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>