force-app/main/default/objects/Carro__c/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <label>Placa</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>