force-app/main/default/objects/Carro__c/fields/Quilometragem__c.field-meta.xml
<CustomField>
    <fullName>Quilometragem__c</fullName>
    <label>Quilometragem</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>