force-app/main/default/objects/Carro__c/fields/Renavam__c.field-meta.xml
<CustomField>
    <fullName>Renavam__c</fullName>
    <label>Renavam</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>