force-app/main/default/objects/Carro__c/fields/SituacaoVeiculo__c.field-meta.xml
<CustomField>
    <fullName>SituacaoVeiculo__c</fullName>
    <label>Situação Veículo</label>
    <type>TextArea</type>
</CustomField>